More --coordcol options acceptable in Crop
Until now, in Crop, `--coordcol' had to be called exactly the same number
times as the input's dimensions. This was because it was being used
directly in the function to read the columns. This is inconvenient (for
example it didn't allow using `--coordcol' in default configuration files).

With this commit, if it is called more than the input's number of
dimensions, there is no problem. The extra columns will be deleted before
being used. Crop aborts with an error only if there is not enough
`--coordcol' calls.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -8183,10 +8183,13 @@ input.
 
 @item -x STR/INT
 @itemx --coordcol=STR/INT
-The column in a catalog to read as a coordinate. This option must be called
-multiple times depending on the number of dimensions in the input
-dataset. The value can be either the column number (starting from 1), or a
-match/search in the table meta-data, see @ref{Selecting table columns}.
+The column in a catalog to read as a coordinate. The value can be either
+the column number (starting from 1), or a match/search in the table
+meta-data, see @ref{Selecting table columns}. This option must be called
+multiple times, depending on the number of dimensions in the input
+dataset. If it is called more than necessary, the extra columns (later
+calls to this option on the command-line or configuration files) will be
+ignored, see @ref{Configuration file precedence}.
 
 @item -n STR/INT
 @item --namecol=STR/INT
