CRLF line terminated ASCII files acceptable for reading
Some operating systems like Microsoft Windows, terminate their lines with a
carriage return character and a new-line character (two characters). While
Unix-like operating systems just use a single new-line character. So until
now, if a text ASCII file was made in Windows, it couldn't be read.

With this commit, a check is added to also check for a carriage return
character at the end of a line. This enables programs taking ASCII text
files as input to read such files even if they were made in operating
systems like Microsoft Windows.

--- a/NEWS
+++ b/NEWS
@@ -31,6 +31,11 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   option, the `--mcol' values of the catalog will be interpretted as total
   brightness (sum of pixel values), not magnitude.
 
+  Library: Functions that read data from an ASCII text file
+  (`gal_txt_table_info', `gal_txt_table_read', `gal_txt_image_read') now
+  also operate on files with CRLF line terminators (for example text files
+  created in MS Windows).
+
 ** Removed features
 
 ** Changed features
