Pushing tags in Debian release notes
In the Debian release checklist, we weren't pushing the created tags onto
the repo (informed by Ole Streicher). So a `--tags' was added to the final
`git push' command. Also, `origin' was removed, because it is irrelevant.

Also, the NEWS file was updated to say that all programs can now benefit
from the reading of CRLF line terminator ASCII text files. From the
previous version of the NEWS file, normal user might think that it is only
possible in the libraries.

--- a/NEWS
+++ b/NEWS
@@ -4,8 +4,12 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
 ** New features
 
-  `.fit' suffix is now also recognized as a FITS file extension in all
-  programs and libraries.
+  All programs: `.fit' suffix is now also recognized as a FITS file
+  extension in all programs and libraries.
+
+  All programs: ASCII text files (tables) created with CRLF line
+  terminators (for example text files created in MS Windows) are now also
+  readable as input when necessary.
 
   Arithmetic: now has a new `--globalhdu' (`-g') option which can be used
   once for all the input images.
@@ -33,8 +37,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   Library: Functions that read data from an ASCII text file
   (`gal_txt_table_info', `gal_txt_table_read', `gal_txt_image_read') now
-  also operate on files with CRLF line terminators (for example text files
-  created in MS Windows).
+  also operate on files with CRLF line terminators.
 
 ** Removed features
 
