--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -1543,17 +1543,19 @@ management of its version controlled source server there.
 
 @c To the developers: please keep this in the same order as the THANKS file
 @c (alphabetical, except for the names in the paragraph above).
-We would also like to gratefully thank (in alphabetical order) Roland
-Bacon, Nicolas Bouché, Adrian Bunk, Rosa Calvi, Antonio Diaz Diaz, Raúl
-Infante Sainz, Lee Kelvin, Mohammad-Reza Khellat, Alan Lefor, Guillaume
-Mahler, Francesco Montanari, William Pence, Yahya Sefidbakht, Ole
-Streicher, Ignacio Trujillo, David Valls-Gabaud and Christopher Willmer for
-their useful and constructive comments and suggestions. Finally we should
-thank all the (sometimes anonymous) people in various online forums which
-patiently answered all our small (but important) technical questions. All
-work on Gnuastro has been voluntary, but we are most grateful to the
-following institutions (in chronological order) for hosting us in our
-research:
+We would also like to gratefully thank (in alphabetical order by family
+name) Marjan Akbari, Roland Bacon, Nicolas Bouch@'e, Adrian Bunk, Rosa
+Calvi, Antonio Diaz Diaz, Raúl Infante Sainz, Lee Kelvin, Mohammad-Reza
+Khellat, Alan Lefor, Guillaume Mahler, Francesco Montanari, William Pence,
+Yahya Sefidbakht, Ole Streicher, Ignacio Trujillo, David Valls-Gabaud and
+Christopher Willmer for their useful and constructive comments and
+suggestions. Finally we should thank all the (sometimes anonymous) people
+in various online forums which patiently answered all our small (but
+important) technical questions.
+
+All work on Gnuastro has been voluntary, but the authors are most grateful
+to the following institutions (in chronological order) for hosting us in
+our research:
 
 @quotation
 Ministry of education, culture, sports, science and technology (MEXT), Japan.@*
