--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -2853,21 +2853,17 @@ activities, please clone the version controlled source as described in
 
 @cindex Gzip
 @cindex Lzip
-Gnuastro's official tarball is released with two formats: Gzip (with suffix
-@file{.tar.gz}) and Lzip (with suffix @file{.tar.lz}). The former is a very
-well-known and widely used compression program created by GNU and available
-in most systems. The latter provides a better compression ratio and more
-robust archival capacity. For example Gnuastro 0.2's tarball was 2.8MB and
-4.2MB with Lzip and Gzip respectively. From the
-@url{http://www.nongnu.org/lzip/lzip.html, Lzip webpage}: ``Lzip is a
-lossless data compressor with a user interface similar to the one of gzip
-or bzip2. Lzip can compress about as fast as gzip (@command{lzip -0}), or
-compress most files more than bzip2 (@command{lzip -9}). Decompression
-speed is intermediate between gzip and bzip2. Lzip is better than gzip and
-bzip2 from a data recovery perspective.'' However, Lzip is currently not
-too common, so it might not be pre-installed in your operating
-system. Installing it from your operating system's package manager or from
-source is very easy.
+Gnuastro's official/stable tarball is released with two formats: Gzip (with
+suffix @file{.tar.gz}) and Lzip (with suffix @file{.tar.lz}). The
+pre-release tarballs (after version 0.3) are released only as an Lzip
+tarball. Gzip is a very well-known and widely used compression program
+created by GNU and available in most systems. However, Lzip provides a
+better compression ratio and more robust archival capacity. For example
+Gnuastro 0.3's tarball was 2.9MB and 4.3MB with Lzip and Gzip respectively,
+see the @url{http://www.nongnu.org/lzip/lzip.html, Lzip webpage} for
+more. Lzip might not be pre-installed in your operating system, if so,
+installing it from your operating system's package manager or from source
+is very easy and fast (it is a very small program).
 
 The GNU FTP server is mirrored (has backups) in various locations on the
 globe (@url{http://www.gnu.org/order/ftp.html}). You can use the closest
