Check clump number before removing false clumps
When a detected region contains no initial clumps (which might later be
removed), a segmentation fault occured in NoiseChisel. So a check was added
in `clumps_det_keep_true_relable' to avoid such cases.

This fixes bug #51906.

--- a/NEWS
+++ b/NEWS
@@ -135,6 +135,8 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   Arithmetic with one file and no operators (bug #51559).
 
+  NoiseChisel segfault when detection contains no clumps (bug #51906).
+
 
 
 
